--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ description = "Solutions to Advent of Code 2017"
 license = "MIT"
 
 [dependencies]
+regex = "0.2"
+libc = "0.2"
+serde = "1"
+serde_derive = "1"
+lazy_static = "1"
